# nemo-lang

./: README.md  meson.build
src/: a.out  common.cpp  common.hpp  main.c  main.cpp  makefile  meson.build
src/grammar/: grammar.c  grammar.cpp  grammar.h  grammar.mpc  meson.build  mpc.c
src/grammar/include/grammar/: grammar.h
src/include/nemo/: common.hpp  verinfo.h
src/interpreter/: interpreter.cpp  meson.build
src/interpreter/include/interpreter/: interpreter.h
src/ir/: ir.cpp  meson.build
src/ir/include/ir/: ir.h
src/mpc/: meson.build  mpc.c
test/: test.nemo
